<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.triviaapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Question #1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionNumberStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="#1" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingTop="16dp">

            <CheckBox
                android:id="@+id/question1A"
                style="@style/CheckboxStyle"
                android:text="Denver Broncos" />

            <CheckBox
                android:id="@+id/question1B"
                style="@style/CheckboxStyle"
                android:text="Green Bay Packers" />

            <CheckBox
                android:id="@+id/question1C"
                style="@style/CheckboxStyle"
                android:text="Baltimore Ravens" />

            <CheckBox
                android:id="@+id/question1D"
                style="@style/CheckboxStyle"
                android:text="Miami Dolphins" />
        </LinearLayout>

        <View style="@style/QuestionDividerStyle" />

        <!--Question #2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionNumberStyle"
                android:text="#2" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2" />
        </LinearLayout>

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                style="@style/RadioButtonStyle"
                android:text="Cam Newton" />

            <RadioButton
                style="@style/RadioButtonStyle"
                android:text="Stephen Curry" />

            <RadioButton
                android:id="@+id/question2Answer"
                style="@style/RadioButtonStyle"
                android:text="Lamar Jackson" />
        </RadioGroup>

        <View style="@style/QuestionDividerStyle" />

        <!--Question #3 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionNumberStyle"
                android:text="#3" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3" />
        </LinearLayout>

        <EditText
            android:id="@+id/question3text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="Enter answer here"
            android:inputType="textCapWords"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:textSize="16sp" />

        <View style="@style/QuestionDividerStyle" />

        <!--Question #4 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionNumberStyle"
                android:text="#4" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4" />
        </LinearLayout>

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                style="@style/RadioButtonStyle"
                android:text="Kareem Abdul-Jabbar" />

            <RadioButton
                android:id="@+id/question4Answer"
                style="@style/RadioButtonStyle"
                android:text="Wilt Chamberlain" />

            <RadioButton
                style="@style/RadioButtonStyle"
                android:text="Bill Russell" />
        </RadioGroup>

        <View style="@style/QuestionDividerStyle" />

        <!--Question #5 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionNumberStyle"
                android:text="#5" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5" />
        </LinearLayout>

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                style="@style/RadioButtonStyle"
                android:text="Kansas City Monarchs" />

            <RadioButton
                android:id="@+id/question5Answer"
                style="@style/RadioButtonStyle"
                android:text="Montreal Expos" />

            <RadioButton
                style="@style/RadioButtonStyle"
                android:text="Brooklyn Dodgers" />
        </RadioGroup>

        <View style="@style/QuestionDividerStyle" />

        <!--Question #6 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionNumberStyle"
                android:text="#6" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question6" />
        </LinearLayout>

        <EditText
            android:id="@+id/question6text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="Enter answer here"
            android:inputType="textCapWords"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="checkAnswers"
            android:text="Check My Answers!" />

    </LinearLayout>
</ScrollView>
